--- a/environment.yml
+++ b/environment.yml
@@ -3,22 +3,37 @@ channels:
   - defaults
 dependencies:
   - attrs=21.4.0=pyhd3eb1b0_0
+  - blas=1.0=mkl
+  - bottleneck=1.3.5=py39h67323c0_0
   - ca-certificates=2022.07.19=hecd8cb5_0
   - certifi=2022.9.14=py39hecd8cb5_0
   - iniconfig=1.1.1=pyhd3eb1b0_0
+  - intel-openmp=2021.4.0=hecd8cb5_3538
   - libcxx=14.0.6=h9765a3e_0
   - libffi=3.3=hb1e8313_2
+  - mkl=2021.4.0=hecd8cb5_637
+  - mkl-service=2.4.0=py39h9ed2024_0
+  - mkl_fft=1.3.1=py39h4ab4a9b_0
+  - mkl_random=1.2.2=py39hb2f4e1b_0
   - ncurses=6.3=hca72f7f_3
+  - numexpr=2.8.3=py39h2e5f0a9_0
+  - numpy=1.23.1=py39h2e5f0a9_0
+  - numpy-base=1.23.1=py39h3b1a694_0
   - openssl=1.1.1q=hca72f7f_0
   - packaging=21.3=pyhd3eb1b0_0
+  - pandas=1.4.4=py39he9d5cce_0
   - pip=22.1.2=py39hecd8cb5_0
   - pluggy=1.0.0=py39hecd8cb5_1
   - py=1.11.0=pyhd3eb1b0_0
   - pyparsing=3.0.9=py39hecd8cb5_0
   - pytest=7.1.2=py39hecd8cb5_0
+  - pytest-mock=3.7.0=py39hecd8cb5_0
   - python=3.9.13=hdfd78df_1
+  - python-dateutil=2.8.2=pyhd3eb1b0_0
+  - pytz=2022.1=py39hecd8cb5_0
   - readline=8.1.2=hca72f7f_1
   - setuptools=63.4.1=py39hecd8cb5_0
+  - six=1.16.0=pyhd3eb1b0_1
   - sqlite=3.39.2=h707629a_0
   - tk=8.6.12=h5d9f67b_0
   - tomli=2.0.1=py39hecd8cb5_0
